--- a/MasterConfig.json
+++ b/MasterConfig.json
@@ -4,6 +4,7 @@
   "cageurl": "https://CageIP:786/set-up/",
   "configPath": "C:\\Users\\{userName}\\Walker Digital Table\u00A0Systems\\WDTS INDIA - automation\\Playwright\\ConfigFiles",
   "automationChipsPath": "C:\\Users\\{userName}\\Walker Digital Table\u00A0Systems\\WDTS INDIA - automation\\Playwright\\MasterFiles\\AutomationChips.xlsx",
-  "testCaseReportPath": "C:\\Users\\{userName}\\Walker Digital Table\u00A0Systems\\WDTS INDIA - automation\\Playwright\\TestCaseReport"
+  "testCaseReportPath": "C:\\Users\\{userName}\\Walker Digital Table\u00A0Systems\\WDTS INDIA - automation\\Playwright\\TestCaseReport",
+  "testCaseLogsPath" : "C:\\Users\\PrasadKamble\\Walker Digital Table\u00A0Systems\\WDTS INDIA - automation\\Playwright\\Logs"
 }
 
