--- a/MasterConfig.json
+++ b/MasterConfig.json
@@ -2,6 +2,8 @@
   "ppapplicationurl": "https://wdts-gateway-env.wdts.local:792/login",
   "tableurl": "https://tableIP:790/login/table-ui",
   "cageurl": "https://CageIP:786/set-up/",
+  "password": "35Ramrod!",
+  "txn_password": "35Password!",
   "basePath": "Z:\\PlayWright",
   "configPath": "{basePath}\\ConfigFiles",
   "automationChipsPath": "{basePath}\\MasterFiles\\AutomationChips.xlsx",
