--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,5 @@
-{
+
+  {
   "version": "0.2.0",
   "configurations": [
  
@@ -10,7 +11,7 @@
       "args": [
         "-s",
         "-v",
-        "TestCases\\.DummyTestCases\\test_TEST-14007.py"
+        "TestCases\\BaccaratGamePlay\\BGP_OwnershipPayoutLosingChips\\test_TEST-32107.py"
       ],
       "console": "integratedTerminal",
       "justMyCode": true
