--- a/MasterConfig.json
+++ b/MasterConfig.json
@@ -4,11 +4,11 @@
   "cageurl": "https://CageIP:786/set-up/",
   "password": "35Ramrod!",
   "txn_password": "35Password!",
-  "basePath": "Z:\\PlayWright",
-  "configPath": "{basePath}\\ConfigFiles",
-  "automationChipsPath": "{basePath}\\MasterFiles\\AutomationChips.xlsx",
-  "testCaseReportPath": "{basePath}\\TestCaseReport",
-  "testCaseLogsPath": "{basePath}\\Logs",
-  "testDataPath": "{basePath}\\TestData"
+  "basePath": "Z:/PlayWright",
+  "configPath": "{basePath}/ConfigFiles",
+  "automationChipsPath": "{basePath}/MasterFiles/AutomationChips.xlsx",
+  "testCaseReportPath": "{basePath}/TestCaseReport",
+  "testCaseLogsPath": "{basePath}/Logs",
+  "testDataPath": "{basePath}/TestData"
 }
 
